--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -30,6 +30,7 @@
   "esg.cta": "Learn More",
 
   "footer.company": "Panshaker Services",
+  "footer.company_title": "Panshaker Services",
   "footer.about": "About Us",
   "footer.careers": "Careers",
   "footer.investors": "Investor Relations",
@@ -38,19 +39,79 @@
   "footer.hardware": "Hardware Solutions",
   "footer.support": "After-Sales Service",
   "footer.contact": "Contact",
-  "footer.copyright": "©2026 Panshaker LLC. All Rights Reserved.",
+  "footer.contact_title": "Contact",
+  "footer.email": "Email: contact@panshaker.com",
+  "footer.location": "Location: San Diego, CA",
+  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "Restaurant Automation Infrastructure Provider for the North American Market",
 
-  "about.banner_title": "Company Information",
-  "about.banner_subtitle": "Innovation for the Art of Wok",
-  "about.section_intro": "About Panshaker",
-  "about.section_team": "Leadership",
+  "home.hero.title": "AI-Powered Low-Labor-Cost<br><strong>Commercial Chinese Cuisine Solutions</strong>",
+  "home.hero.subtitle": "Integrating hardware automation with AI intelligent systems to redefine restaurant efficiency",
+  "home.hero.cta": "Learn More",
+  "home.philosophy.title": "Beyond Food — It's Hard Tech",
+  "home.philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
+  "home.solution.price_title": "Half the Price of Competitors",
+  "home.solution.price_desc": "< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
+  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
+  "home.solution.learn_more": "Learn More →",
+  "home.ambassador.line": "Gao Leilei | Global Ambassador | Former Beijing Guoan FC player, restaurant owner",
+  "home.esg.title": "Silent Kitchen Initiative",
+  "home.esg.desc": "Empowering the hearing-impaired community, creating inclusive employment<br>Using technology to break communication barriers, let everyone shine",
+  "home.esg.cta": "Learn More",
 
-  "team.xu_name": "Haoran Xu",
-  "team.xu_title": "Founder",
-  "team.view_profile": "View Profile",
+  "about.banner.title": "Company Information",
+  "about.banner.subtitle": "Innovation Meets Automation",
+  "about.intro.title": "About Panshaker",
+  "about.intro.p1": "Panshaker Services is a leader in North American restaurant automation. Our mission is to bring authentic Eastern flavors across borders so every city can enjoy great food. By integrating industrial-grade automation hardware with our own AI, we deliver reliable, efficient kitchens.",
+  "about.intro.p2": "We pioneered unmanned cooking for Chinese cuisine in North America, turning uncontrollable cooking steps into standardized processes to solve high labor costs, low efficiency, inconsistent quality, and operational complexity.",
+  "about.intro.p3": "We run our own brands and, through an in-store partnership and equipment subscription model, empower existing restaurants. Our edge comes from self-built wok robots, AI vision monitoring, and Synapse OS.",
+  "about.intro.p4": "We will keep advancing restaurant automation, expanding from wok robots to full-stack Chinese cuisine infrastructure to lower the barrier for entrepreneurs. We use leading tech to connect the physical and digital worlds, creating value for operators and better experiences for diners.",
+  "about.team.title": "Leadership",
+  "about.team.xu.name": "Haoran Xu",
+  "about.team.xu.role": "Founder",
+  "about.team.view_profile": "View Profile →",
+
+  "profile.back_link": "← Back to Leadership Team",
+  "profile.xu.name": "Haoran Xu",
+  "profile.xu.role": "Founder",
+  "profile.xu.p1": "Haoran Xu holds a Ph.D. and M.S. in Engineering from the University of Washington, a B.S. in Mathematics from The Ohio State University, and a B.A. in Film from Northwestern University (Qatar).",
+  "profile.xu.p2": "Before founding Panshaker, Haoran founded ADiB Consulting in 2023. He interned as a software engineer at Samsung China, ROHM Semiconductor China, and Hyundai AutoEver (2022-2025), interned at Hengdu Law Firm as a patent agent in 2025, and has been a CS research assistant at Ohio University since Oct 2025.",
+  "profile.sun.name": "Qisheng Sun",
+  "profile.sun.role": "Co-Founder",
+  "profile.sun.p1": "Qisheng Sun holds an M.S. from UC San Diego, dual B.S. degrees in Computer Science and Mathematics from Case Western Reserve University, and a Mathematics degree from Xi'an Jiaotong University.",
+  "profile.unknown.name": "unknown",
+  "profile.unknown.role": "CTO",
+  "profile.unknown.p1": "unknown holds a Ph.D. in Computer Science from the University of Pennsylvania and a B.S. in Computer Science from Tianjin University.",
 
   "careers.title": "Join Our Team",
+  "careers.heading": "Join Our Team",
+  "careers.role.title": "Lead Field Service Technician",
+  "careers.role.location": "Location: Seattle, WA",
+  "careers.role.salary": "Salary: $79,000 - $98,800 a year",
+  "careers.role.type": "Type: Full-time",
+  "careers.role.overview_title": "Role Overview",
+  "careers.role.overview_desc": "Lead on-site installation, commissioning, and maintenance for Panshaker automated cooking systems, ensuring reliability and customer success.",
+  "careers.role.resp_title": "Key Responsibilities",
+  "careers.role.resp_1": "Perform on-site installation, commissioning, and maintenance of Panshaker automated cooking equipment.",
+  "careers.role.resp_2": "Diagnose technical issues and perform repairs to minimize downtime.",
+  "careers.role.resp_3": "Provide training and technical support to kitchen staff.",
+  "careers.role.resp_4": "Maintain detailed service logs and report on hardware performance.",
+  "careers.benefits_title": "Benefits",
+  "careers.benefit_1": "Tuition reimbursement",
+  "careers.benefit_2": "Parental leave",
+  "careers.benefit_3": "Health insurance",
+  "careers.benefit_4": "401(k) matching",
+  "careers.benefit_5": "Paid time off",
+  "careers.benefit_6": "Vision insurance",
+  "careers.benefit_7": "Health savings account",
+  "careers.benefit_8": "Dental insurance",
+  "careers.benefit_9": "Flexible spending account",
+  "careers.benefit_10": "Life insurance",
+  "careers.benefit_11": "Employee assistance program",
+  "careers.benefit_12": "Disability insurance",
+  "careers.benefit_13": "Paid holidays",
+  "careers.apply_cta": "Apply Now",
 
   "investors.loading": "We're still working hard. Thank you for your support.",
   "investors.subtitle": "Wishing you happiness and all the best."
