--- a/js/lang/ja.json
+++ b/js/lang/ja.json
@@ -30,6 +30,7 @@
   "esg.cta": "詳しく見る",
 
   "footer.company": "Panshaker Services",
+  "footer.company_title": "Panshaker Services",
   "footer.about": "会社概要",
   "footer.careers": "採用情報",
   "footer.investors": "投資家情報",
@@ -38,20 +39,80 @@
   "footer.hardware": "ハードウェアソリューション",
   "footer.support": "アフターサービス",
   "footer.contact": "お問い合わせ",
-  "footer.copyright": "©2026 Panshaker LLC. All Rights Reserved.",
-  "footer.tagline": "北米市場向け外食オートメーションインフラプロバイダー",
+  "footer.contact_title": "お問い合わせ",
+  "footer.email": "Email: contact@panshaker.com",
+  "footer.location": "Location: San Diego, CA",
+  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
+  "footer.tagline": "北米市場向け外食オートメーション基盤プロバイダー",
 
-  "about.banner_title": "企業情報",
-  "about.banner_subtitle": "Innovation for the Art of Wok",
-  "about.section_intro": "会社紹介",
-  "about.section_team": "経営チーム",
+  "home.hero.title": "AI搭載の低人件費<br><strong>商業中華料理ソリューション</strong>",
+  "home.hero.subtitle": "ハードウェア自動化とAIインテリジェントシステムを統合し、外食産業の効率を再定義",
+  "home.hero.cta": "詳しく見る",
+  "home.philosophy.title": "食を超えて、ハードテックへ",
+  "home.philosophy.desc": "外食産業の制御しづらい手動調理プロセスを、AI時代に適した高信頼の産業自動化プロセスに変換します。<br>北米で中華料理の新たな可能性を創造します。",
+  "home.solution.price_title": "競合の半額",
+  "home.solution.price_desc": "2週間以内の低コスト改装で<br>無人調理を実現",
+  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_desc": "次世代レストラン運営システム<br>中華料理の海外展開をワンストップで標準化",
+  "home.solution.learn_more": "詳しく見る →",
+  "home.ambassador.line": "高雷雷 | グローバルアンバサダー | 元北京国安FC選手・レストランオーナー",
+  "home.esg.title": "サイレントキッチンプログラム",
+  "home.esg.desc": "聴覚障害者コミュニティのエンパワーメント、包括的な雇用環境の創出<br>テクノロジーでコミュニケーションの壁をなくし、誰もが輝ける社会へ",
+  "home.esg.cta": "詳しく見る",
 
-  "team.xu_name": "シュー・ハオラン",
-  "team.xu_title": "創設者",
-  "team.view_profile": "プロフィール",
+  "about.banner.title": "企業情報",
+  "about.banner.subtitle": "Innovation Meets Automation",
+  "about.intro.title": "会社紹介",
+  "about.intro.p1": "Panshaker Services は北米の外食オートメーションをリードする企業です。国境を越えて本格的な東洋の味を届けることを使命に、産業用自動化ハードウェアと自社開発のAIを組み合わせ、信頼性と効率を両立したキッチンを実現します。",
+  "about.intro.p2": "中華料理の無人調理を北米で実現したパイオニアとして、制御しづらい調理工程を標準化し、高人件費・低効率・品質のばらつき・運営の複雑さといった課題を解決します。",
+  "about.intro.p3": "自社ブランドの運営に加え、「店中店」モデルと機器サブスクリプションで既存店舗を支援。自社製の炒めロボット、AIビジョン監視、Synapse OS が競争力の源泉です。",
+  "about.intro.p4": "今後も外食オートメーションを深化させ、炒めロボットから中華料理のフルスタック基盤へ拡張し、起業のハードルを下げます。フィジカルとデジタルを結ぶ先端技術で、事業者に価値を、顧客により良い体験を届けます。",
+  "about.team.title": "経営チーム",
+  "about.team.xu.name": "シュー・ハオラン",
+  "about.team.xu.role": "創設者",
+  "about.team.view_profile": "プロフィールを見る →",
 
-  "careers.title": "チームに参加",
+  "profile.back_link": "← 経営チームへ戻る",
+  "profile.xu.name": "シュー・ハオラン",
+  "profile.xu.role": "創設者",
+  "profile.xu.p1": "ワシントン大学工学博士・修士、オハイオ州立大学数学学士、ノースウェスタン大学（カタール）映画学士。",
+  "profile.xu.p2": "2023年に ADiB Consulting を設立。中国サムスン電子、ローム半導体（中国）、現代オートエバーでソフトウェアエンジニアインターン（2022-2025）、2025年に恒都法律事務所で特許代理インターン、2025年10月よりオハイオ大学CS研究助手。",
+  "profile.sun.name": "孫啓聖",
+  "profile.sun.role": "共同創設者",
+  "profile.sun.p1": "UCサンディエゴ大学院修士。ケース・ウェスタン・リザーブ大学で計算機科学・数学の学士、西安交通大学数学学士。",
+  "profile.unknown.name": "unknown",
+  "profile.unknown.role": "CTO",
+  "profile.unknown.p1": "ペンシルベニア大学計算機科学博士、天津大学計算機科学学士。",
 
-  "investors.loading": "まだ頑張っています。ご支援に感謝しています。",
-  "investors.subtitle": "幸福と万事のご成功をお祈りいたします。"
+  "careers.title": "採用情報",
+  "careers.heading": "採用情報",
+  "careers.role.title": "リード フィールドサービスエンジニア",
+  "careers.role.location": "勤務地：シアトル（ワシントン州）",
+  "careers.role.salary": "給与：年収 $79,000 - $98,800",
+  "careers.role.type": "雇用形態：フルタイム",
+  "careers.role.overview_title": "職務概要",
+  "careers.role.overview_desc": "Panshaker の自動調理設備の現地設置・試運転・保守をリードし、信頼性と顧客成功を支えます。",
+  "careers.role.resp_title": "主な業務",
+  "careers.role.resp_1": "自動調理設備の設置・試運転・保守を現地で実施。",
+  "careers.role.resp_2": "技術課題を診断し、迅速に修理してダウンタイムを最小化。",
+  "careers.role.resp_3": "キッチンスタッフへのトレーニングと技術サポートを提供。",
+  "careers.role.resp_4": "サービスログを管理し、ハードウェア性能をレポート。",
+  "careers.benefits_title": "福利厚生",
+  "careers.benefit_1": "学費補助",
+  "careers.benefit_2": "育児休暇",
+  "careers.benefit_3": "医療保険",
+  "careers.benefit_4": "401(k) マッチング",
+  "careers.benefit_5": "有給休暇",
+  "careers.benefit_6": "眼科保険",
+  "careers.benefit_7": "健康貯蓄口座",
+  "careers.benefit_8": "歯科保険",
+  "careers.benefit_9": "フレックス支出口座",
+  "careers.benefit_10": "生命保険",
+  "careers.benefit_11": "従業員支援プログラム",
+  "careers.benefit_12": "傷病・障害保険",
+  "careers.benefit_13": "祝日・休暇手当",
+  "careers.apply_cta": "応募する",
+
+  "investors.loading": "まだ準備中です。ご支援に感謝いたします。",
+  "investors.subtitle": "皆さまの幸福とご多幸をお祈りします。"
 }
