--- a/js/lang/ko.json
+++ b/js/lang/ko.json
@@ -30,6 +30,7 @@
   "esg.cta": "자세히 보기",
 
   "footer.company": "Panshaker Services",
+  "footer.company_title": "Panshaker Services",
   "footer.about": "회사 소개",
   "footer.careers": "채용",
   "footer.investors": "투자자 관계",
@@ -38,20 +39,80 @@
   "footer.hardware": "하드웨어 솔루션",
   "footer.support": "사후 서비스",
   "footer.contact": "연락처",
-  "footer.copyright": "©2026 Panshaker LLC. All Rights Reserved.",
+  "footer.contact_title": "연락처",
+  "footer.email": "Email: contact@panshaker.com",
+  "footer.location": "Location: San Diego, CA",
+  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "북미 시장을 위한 외식 자동화 인프라 제공업체",
 
-  "about.banner_title": "회사 정보",
-  "about.banner_subtitle": "Innovation for the Art of Wok",
-  "about.section_intro": "회사 소개",
-  "about.section_team": "경영진",
+  "home.hero.title": "AI 기반 저인건비<br><strong>상업용 중식 솔루션</strong>",
+  "home.hero.subtitle": "하드웨어 자동화와 AI 지능형 시스템을 통합하여 외식 산업의 효율성을 재정의",
+  "home.hero.cta": "자세히 보기",
+  "home.philosophy.title": "음식을 넘어, 하드 테크",
+  "home.philosophy.desc": "외식 산업의 통제 불가능한 수동 조리 과정을 AI 시대에 맞는 고신뢰 산업 자동화 프로세스로 전환합니다.<br>북미에서 중화 요리의 새로운 가능성을 만듭니다.",
+  "home.solution.price_title": "경쟁사 가격의 1/2",
+  "home.solution.price_desc": "2주 이내 저비용 개조<br>무인 조리 실현",
+  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_desc": "차세대 레스토랑 운영 시스템<br>중식 해외 진출을 위한 원스톱 표준화 솔루션",
+  "home.solution.learn_more": "자세히 보기 →",
+  "home.ambassador.line": "가오레이레이 | 글로벌 대사 | 전 베이징 궈안 FC 선수, 레스토랑 사장",
+  "home.esg.title": "사일런트 키친 프로그램",
+  "home.esg.desc": "청각 장애인 커뮤니티 역량 강화, 포용적 고용 환경 구축<br>기술로 소통 장벽을 없애고, 모두가 빛나게",
+  "home.esg.cta": "자세히 보기",
 
-  "team.xu_name": "쉬하오란",
-  "team.xu_title": "창립자",
-  "team.view_profile": "프로필 보기",
+  "about.banner.title": "회사 정보",
+  "about.banner.subtitle": "Innovation Meets Automation",
+  "about.intro.title": "회사 소개",
+  "about.intro.p1": "Panshaker Services는 북미 외식 자동화 분야의 선도 기업입니다. ‘우리 본연의 동양 미식을 국경을 넘어 전달한다’는 사명을 바탕으로, 산업용 자동화 하드웨어와 자체 AI를 결합해 신뢰도와 효율을 갖춘 주방을 만듭니다.",
+  "about.intro.p2": "북미 중식 분야에서 무인 조리를 구현한 개척자로서, 제어가 어려운 조리 단계를 표준화하여 고인건비·저효율·품질 편차·운영 복잡도 문제를 해결합니다.",
+  "about.intro.p3": "자체 브랜드 운영뿐 아니라 ‘매장 내 매장’ 모델과 장비 구독을 통해 기존 식당을 지원합니다. 자가 개발한 볶음 로봇, AI 비전 모니터링, Synapse OS가 경쟁력의 핵심입니다.",
+  "about.intro.p4": "앞으로도 외식 자동화를 심화해 볶음 로봇에서 중식 전 영역 인프라로 확장하고, 창업 장벽을 낮춥니다. 물리와 디지털을 잇는 기술로 사업자에게 가치를, 고객에게 더 나은 경험을 제공합니다.",
+  "about.team.title": "경영진",
+  "about.team.xu.name": "쉬하오란",
+  "about.team.xu.role": "창립자",
+  "about.team.view_profile": "프로필 보기 →",
 
-  "careers.title": "우리 팀에 합류하세요",
+  "profile.back_link": "← 경영진 목록으로",
+  "profile.xu.name": "쉬하오란",
+  "profile.xu.role": "창립자",
+  "profile.xu.p1": "워싱턴대 공학 박사·석사, 오하이오주립대 수학 학사, 노스웨스턴대(카타르) 영화 학사.",
+  "profile.xu.p2": "2023년 ADiB Consulting 설립. 2022-2025 중국 삼성전자·로옴반도체·현대오토에버 소프트웨어 엔지니어 인턴, 2025년 헝두 로펌 특허 인턴, 2025년 10월부터 오하이오대 CS 연구 조교.",
+  "profile.sun.name": "손치성",
+  "profile.sun.role": "공동 창립자",
+  "profile.sun.p1": "UC 샌디에이고 석사, 케이스웨스턴리저브대 컴퓨터공학·수학 학사, 시안교통대 수학 학사.",
+  "profile.unknown.name": "unknown",
+  "profile.unknown.role": "CTO",
+  "profile.unknown.p1": "펜실베이니아대 컴퓨터과학 박사, 톈진대 컴퓨터과학 학사.",
 
-  "investors.loading": "아직 열심히 노력 중입니다. 응원해 주셔서 감사합니다.",
-  "investors.subtitle": "행복한 생활과 만사형통을 기원합니다."
+  "careers.title": "채용",
+  "careers.heading": "채용",
+  "careers.role.title": "리드 필드 서비스 테크니션",
+  "careers.role.location": "근무지: 시애틀, 워싱턴주",
+  "careers.role.salary": "연봉: $79,000 - $98,800",
+  "careers.role.type": "고용형태: 정규직",
+  "careers.role.overview_title": "직무 개요",
+  "careers.role.overview_desc": "Panshaker 자동 조리 설비의 설치·시운전·유지보수를 주도하며 신뢰성과 고객 성공을 보장합니다.",
+  "careers.role.resp_title": "주요 업무",
+  "careers.role.resp_1": "자동 조리 장비의 현장 설치, 시운전, 유지보수 수행.",
+  "careers.role.resp_2": "기술 문제를 진단하고 신속히 수리하여 다운타임 최소화.",
+  "careers.role.resp_3": "주방 인력 대상 교육과 기술 지원 제공.",
+  "careers.role.resp_4": "서비스 로그를 관리하고 하드웨어 성능을 보고.",
+  "careers.benefits_title": "복리후생",
+  "careers.benefit_1": "학비 지원",
+  "careers.benefit_2": "육아 휴직",
+  "careers.benefit_3": "건강 보험",
+  "careers.benefit_4": "401(k) 매칭",
+  "careers.benefit_5": "유급 휴가",
+  "careers.benefit_6": "시력 보험",
+  "careers.benefit_7": "건강 저축 계좌",
+  "careers.benefit_8": "치과 보험",
+  "careers.benefit_9": "플렉스 지출 계좌",
+  "careers.benefit_10": "생명 보험",
+  "careers.benefit_11": "직원 지원 프로그램",
+  "careers.benefit_12": "장애 보험",
+  "careers.benefit_13": "유급 공휴일",
+  "careers.apply_cta": "지원하기",
+
+  "investors.loading": "아직 준비 중입니다. 응원해 주셔서 감사합니다.",
+  "investors.subtitle": "행복과 만사형통을 기원합니다."
 }
