--- a/js/lang/zh-CN.json
+++ b/js/lang/zh-CN.json
@@ -30,6 +30,7 @@
   "esg.cta": "了解更多",
 
   "footer.company": "Panshaker Services",
+  "footer.company_title": "Panshaker Services",
   "footer.about": "关于我们",
   "footer.careers": "加入团队",
   "footer.investors": "投资者关系",
@@ -38,19 +39,79 @@
   "footer.hardware": "硬件改造方案",
   "footer.support": "售后服务",
   "footer.contact": "联系方式",
-  "footer.copyright": "©2026 Panshaker LLC. All Rights Reserved.",
+  "footer.contact_title": "联系方式",
+  "footer.email": "Email: contact@panshaker.com",
+  "footer.location": "Location: San Diego, CA",
+  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "聚焦北美市场的餐饮自动化基础设施服务商",
 
-  "about.banner_title": "公司信息",
-  "about.banner_subtitle": "Innovation for the Art of Wok",
-  "about.section_intro": "公司介绍",
-  "about.section_team": "管理团队",
+  "home.hero.title": "AI 赋能下低人工成本<br><strong>商业中餐解决方案</strong>",
+  "home.hero.subtitle": "融合硬件自动化与 AI 智能系统，重新定义餐饮行业效率",
+  "home.hero.cta": "了解更多",
+  "home.philosophy.title": "不止于餐饮，更是硬科技",
+  "home.philosophy.desc": "我们将餐饮业不可控的人工烹饪环节，转换为 AI 时代高度可靠的工业自动化环节。<br>在北美，书写中华美食的各种可能。",
+  "home.solution.price_title": "竞品价格 1/2",
+  "home.solution.price_desc": "< 2周 低成本改装<br>实现无人化烹饪",
+  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_desc": "下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务",
+  "home.solution.learn_more": "了解更多 →",
+  "home.ambassador.line": "高雷雷 | 全球大使 | 前北京国安队队员，餐厅老板",
+  "home.esg.title": "无声厨房计划",
+  "home.esg.desc": "赋能听障群体，创造包容性就业环境<br>用科技消除沟通障碍，让每个人都能发光发热",
+  "home.esg.cta": "了解更多",
 
-  "team.xu_name": "徐浩然",
-  "team.xu_title": "创始人",
-  "team.view_profile": "阅读简历",
+  "about.banner.title": "公司信息",
+  "about.banner.subtitle": "Innovation Meets Automation",
+  "about.intro.title": "公司介绍",
+  "about.intro.p1": "伴勺科技（Panshaker Services）是北美餐饮自动化领域的创新领跑者。我们的使命是「让地道的东方味道跨越国界，让每一座城市都能便捷地享受美食」。通过深度集成工业级自动化硬件与自主研发的 AI 系统，我们让餐饮生产更可靠、更高效。",
+  "about.intro.p2": "我们是成功将“无人化烹饪”在北美中餐赛道落地的先驱，将不可控的烹饪环节转化为标准化流程，解决“高人工、低效率、品质不稳定、商业复杂”的痛点。",
+  "about.intro.p3": "我们不仅自主经营品牌，也通过“店中店”合作模式与机器订阅体系，为现有餐厅提供技术赋能。核心竞争力来自自研炒菜机器人、AI 视觉监控与 Synapse OS。",
+  "about.intro.p4": "未来，我们将持续深耕餐饮自动化，从炒菜机器人拓展至全品类中餐标准化基础设施，降低餐饮创业门槛。我们用前沿科技连接物理世界与数字世界，为餐饮从业者创造价值，为每一位食客带来更有温度的体验。",
+  "about.team.title": "管理团队",
+  "about.team.xu.name": "徐浩然",
+  "about.team.xu.role": "创始人",
+  "about.team.view_profile": "阅读简历 →",
 
-  "careers.title": "Join Our Team",
+  "profile.back_link": "← 返回管理团队",
+  "profile.xu.name": "徐浩然",
+  "profile.xu.role": "创始人",
+  "profile.xu.p1": "徐浩然，美国华盛顿大学工程系博士、硕士，美国俄亥俄州立大学数学学士，卡塔尔美国西北大学电影学士。",
+  "profile.xu.p2": "创办伴勺科技前，徐浩然于 2023 年创办爱迪卜咨询。曾于 2022-2025 年在中国三星电子、罗姆半导体（中国）、现代汽车（奥特奥博）担任软件工程师实习生；2025 年在北京恒都律师事务所实习（专利代理）；2025 年 10 月起任美国俄亥俄大学计算机系研究助理。",
+  "profile.sun.name": "孙启圣",
+  "profile.sun.role": "联合创始人",
+  "profile.sun.p1": "孙启圣，美国加州大学圣地亚哥分校硕士，美国凯斯西储大学计算机学士、数学学士，西安交通大学数学学士。",
+  "profile.unknown.name": "unknown",
+  "profile.unknown.role": "CTO",
+  "profile.unknown.p1": "unknown，美国宾夕法尼亚大学计算机系博士，天津大学计算机系学士。",
+
+  "careers.title": "加入我们",
+  "careers.heading": "加入我们",
+  "careers.role.title": "资深现场服务工程师",
+  "careers.role.location": "地点：西雅图，华盛顿州",
+  "careers.role.salary": "薪资：$79,000 - $98,800/年",
+  "careers.role.type": "类型：全职",
+  "careers.role.overview_title": "职位概览",
+  "careers.role.overview_desc": "负责伴勺自动化炒菜设备的现场安装、调试与维护，保障可靠性与客户成功。",
+  "careers.role.resp_title": "核心职责",
+  "careers.role.resp_1": "执行设备现场安装、调试与维护。",
+  "careers.role.resp_2": "诊断技术问题并快速维修，降低停机时间。",
+  "careers.role.resp_3": "为后厨团队提供培训与技术支持。",
+  "careers.role.resp_4": "维护服务日志并反馈硬件性能。",
+  "careers.benefits_title": "福利",
+  "careers.benefit_1": "学费报销",
+  "careers.benefit_2": "育儿假",
+  "careers.benefit_3": "健康保险",
+  "careers.benefit_4": "401(k) 匹配",
+  "careers.benefit_5": "带薪休假",
+  "careers.benefit_6": "视力保险",
+  "careers.benefit_7": "健康储蓄账户",
+  "careers.benefit_8": "牙科保险",
+  "careers.benefit_9": "灵活支出账户",
+  "careers.benefit_10": "人寿保险",
+  "careers.benefit_11": "员工援助计划",
+  "careers.benefit_12": "伤残保险",
+  "careers.benefit_13": "带薪假日",
+  "careers.apply_cta": "立即申请",
 
   "investors.loading": "我们还在努力，感谢您的支持。",
   "investors.subtitle": "祝您生活幸福，万事如意。"
