--- a/js/lang/zh-TW.json
+++ b/js/lang/zh-TW.json
@@ -30,6 +30,7 @@
   "esg.cta": "了解更多",
 
   "footer.company": "Panshaker Services",
+  "footer.company_title": "Panshaker Services",
   "footer.about": "關於我們",
   "footer.careers": "加入團隊",
   "footer.investors": "投資者關係",
@@ -38,19 +39,79 @@
   "footer.hardware": "硬體改造方案",
   "footer.support": "售後服務",
   "footer.contact": "聯繫方式",
-  "footer.copyright": "©2026 Panshaker LLC. All Rights Reserved.",
+  "footer.contact_title": "聯繫方式",
+  "footer.email": "Email: contact@panshaker.com",
+  "footer.location": "Location: San Diego, CA",
+  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "聚焦北美市場的餐飲自動化基礎設施服務商",
 
-  "about.banner_title": "公司資訊",
-  "about.banner_subtitle": "Innovation for the Art of Wok",
-  "about.section_intro": "公司介紹",
-  "about.section_team": "管理團隊",
+  "home.hero.title": "AI 賦能下低人工成本<br><strong>商業中餐解決方案</strong>",
+  "home.hero.subtitle": "融合硬體自動化與 AI 智慧系統，重新定義餐飲行業效率",
+  "home.hero.cta": "了解更多",
+  "home.philosophy.title": "不止於餐飲，更是硬科技",
+  "home.philosophy.desc": "我們將餐飲業不可控的人工烹飪環節，轉換為 AI 時代高度可靠的工業自動化環節。<br>在北美，書寫中華美食的各種可能。",
+  "home.solution.price_title": "競品價格 1/2",
+  "home.solution.price_desc": "< 2週 低成本改裝<br>實現無人化烹飪",
+  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_desc": "下一代餐飲操作系統<br>打造中餐出海標準化一條龍服務",
+  "home.solution.learn_more": "了解更多 →",
+  "home.ambassador.line": "高雷雷 | 全球大使 | 前北京國安隊隊員，餐廳老闆",
+  "home.esg.title": "無聲廚房計劃",
+  "home.esg.desc": "賦能聽障群體，創造包容性就業環境<br>用科技消除溝通障礙，讓每個人都能發光發熱",
+  "home.esg.cta": "了解更多",
 
-  "team.xu_name": "徐浩然",
-  "team.xu_title": "創始人",
-  "team.view_profile": "閱讀簡歷",
+  "about.banner.title": "公司資訊",
+  "about.banner.subtitle": "Innovation Meets Automation",
+  "about.intro.title": "公司介紹",
+  "about.intro.p1": "伴勺科技（Panshaker Services）是北美餐飲自動化領域的創新領跑者。我們的使命是「讓地道的東方味道跨越國界，讓每一座城市都能便捷地享受美食」。透過深度整合工業級自動化硬體與自研 AI 系統，讓餐飲生產更可靠、更高效。",
+  "about.intro.p2": "我們是成功將「無人化烹飪」在北美中餐賽道落地的先驅，將不可控的烹飪環節轉化為標準化流程，解決「高人工、低效率、品質不穩定、商業複雜」的痛點。",
+  "about.intro.p3": "我們不僅自主管理品牌，也透過「店中店」合作模式與機器訂閱體系，為現有餐廳提供技術賦能。核心競爭力來自自研炒菜機器人、AI 視覺監控與 Synapse OS。",
+  "about.intro.p4": "未來，我們將持續深耕餐飲自動化，從炒菜機器人拓展至全品類中餐標準化基礎設施，降低餐飲創業門檻。用前沿科技連接物理世界與數位世界，為餐飲從業者創造價值，為每位食客帶來更有溫度的體驗。",
+  "about.team.title": "管理團隊",
+  "about.team.xu.name": "徐浩然",
+  "about.team.xu.role": "創始人",
+  "about.team.view_profile": "閱讀簡歷 →",
+
+  "profile.back_link": "← 返回管理團隊",
+  "profile.xu.name": "徐浩然",
+  "profile.xu.role": "創始人",
+  "profile.xu.p1": "徐浩然，美國華盛頓大學工程系博士、碩士，美國俄亥俄州立大學數學學士，卡達美國西北大學電影學士。",
+  "profile.xu.p2": "創辦伴勺科技前，徐浩然於 2023 年創辦愛迪卜諮詢。曾於 2022-2025 年在中國三星電子、羅姆半導體（中國）、現代汽車（奧特奧博）擔任軟體工程師實習生；2025 年在北京恆都律師事務所實習（專利代理）；2025 年 10 月起任美國俄亥俄大學電腦系研究助理。",
+  "profile.sun.name": "孫啟聖",
+  "profile.sun.role": "聯合創始人",
+  "profile.sun.p1": "孫啟聖，美國加州大學聖地牙哥分校碩士，美國凱斯西儲大學計算機學士、數學學士，西安交通大學數學學士。",
+  "profile.unknown.name": "unknown",
+  "profile.unknown.role": "CTO",
+  "profile.unknown.p1": "unknown，美國賓夕法尼亞大學計算機系博士，天津大學計算機系學士。",
 
   "careers.title": "加入我們",
+  "careers.heading": "加入我們",
+  "careers.role.title": "資深現場服務工程師",
+  "careers.role.location": "地點：西雅圖，華盛頓州",
+  "careers.role.salary": "薪資：$79,000 - $98,800/年",
+  "careers.role.type": "類型：全職",
+  "careers.role.overview_title": "職位概覽",
+  "careers.role.overview_desc": "負責伴勺自動化炒菜設備的現場安裝、調試與維護，確保可靠與客戶成功。",
+  "careers.role.resp_title": "核心職責",
+  "careers.role.resp_1": "執行設備現場安裝、調試與維護。",
+  "careers.role.resp_2": "診斷技術問題並快速維修，降低停機時間。",
+  "careers.role.resp_3": "為後廚團隊提供培訓與技術支援。",
+  "careers.role.resp_4": "維護服務日誌並回饋硬體性能。",
+  "careers.benefits_title": "福利",
+  "careers.benefit_1": "學費報銷",
+  "careers.benefit_2": "育兒假",
+  "careers.benefit_3": "健康保險",
+  "careers.benefit_4": "401(k) 配對",
+  "careers.benefit_5": "帶薪休假",
+  "careers.benefit_6": "視力保險",
+  "careers.benefit_7": "健康儲蓄帳戶",
+  "careers.benefit_8": "牙科保險",
+  "careers.benefit_9": "彈性支出帳戶",
+  "careers.benefit_10": "人壽保險",
+  "careers.benefit_11": "員工協助計畫",
+  "careers.benefit_12": "傷殘保險",
+  "careers.benefit_13": "帶薪假日",
+  "careers.apply_cta": "立即應徵",
 
   "investors.loading": "我們還在努力，感謝您的支持。",
   "investors.subtitle": "祝您生活幸福，萬事如意。"
