--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -42,7 +42,7 @@
   "footer.contact_title": "Contact",
   "footer.email": "Email: contact@panshaker.com",
   "footer.location": "Location: San Diego, CA",
-  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
+  "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "Restaurant Automation Infrastructure Provider for the North American Market",
 
   "home.hero.title": "AI-Powered Low-Labor-Cost<br><strong>Commercial Chinese Cuisine Solutions</strong>",
