--- a/js/lang/ja.json
+++ b/js/lang/ja.json
@@ -42,7 +42,7 @@
   "footer.contact_title": "お問い合わせ",
   "footer.email": "Email: contact@panshaker.com",
   "footer.location": "Location: San Diego, CA",
-  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
+  "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "北米市場向け外食オートメーション基盤プロバイダー",
 
   "home.hero.title": "AI搭載の低人件費<br><strong>商業中華料理ソリューション</strong>",
