--- a/js/lang/ko.json
+++ b/js/lang/ko.json
@@ -42,7 +42,7 @@
   "footer.contact_title": "연락처",
   "footer.email": "Email: contact@panshaker.com",
   "footer.location": "Location: San Diego, CA",
-  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
+  "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "북미 시장을 위한 외식 자동화 인프라 제공업체",
 
   "home.hero.title": "AI 기반 저인건비<br><strong>상업용 중식 솔루션</strong>",
