--- a/js/lang/zh-CN.json
+++ b/js/lang/zh-CN.json
@@ -42,7 +42,7 @@
   "footer.contact_title": "联系方式",
   "footer.email": "Email: contact@panshaker.com",
   "footer.location": "Location: San Diego, CA",
-  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
+  "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "聚焦北美市场的餐饮自动化基础设施服务商",
 
   "home.hero.title": "AI 赋能下低人工成本<br><strong>商业中餐解决方案</strong>",
