--- a/js/lang/zh-TW.json
+++ b/js/lang/zh-TW.json
@@ -42,7 +42,7 @@
   "footer.contact_title": "聯繫方式",
   "footer.email": "Email: contact@panshaker.com",
   "footer.location": "Location: San Diego, CA",
-  "footer.copyright": "©2026 Panshaker Inc. All Rights Reserved.",
+  "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "聚焦北美市場的餐飲自動化基礎設施服務商",
 
   "home.hero.title": "AI 賦能下低人工成本<br><strong>商業中餐解決方案</strong>",
