--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -1,7 +1,7 @@
 {
   "nav.home": "Home",
   "nav.about": "About Us",
-  "nav.silent_kitchen": "Silent Kitchen",
+  "nav.x7_ai": "X7-AI Robot",
   "nav.contact": "Contact",
   "nav.synapse": "Synapse OS",
   "nav.careers": "Careers",
