--- a/js/lang/ja.json
+++ b/js/lang/ja.json
@@ -1,7 +1,7 @@
 {
   "nav.home": "ホーム",
   "nav.about": "会社概要",
-  "nav.silent_kitchen": "サイレントキッチン",
+  "nav.x7_ai": "X7-AIロボット",
   "nav.contact": "お問い合わせ",
   "nav.synapse": "Synapse OS",
   "nav.careers": "採用情報",
