--- a/js/lang/ko.json
+++ b/js/lang/ko.json
@@ -1,7 +1,7 @@
 {
   "nav.home": "홈",
   "nav.about": "회사 소개",
-  "nav.silent_kitchen": "사일런트 키친",
+  "nav.x7_ai": "X7-AI 로봇",
   "nav.contact": "문의하기",
   "nav.synapse": "Synapse OS",
   "nav.careers": "채용",
