--- a/js/lang/zh-CN.json
+++ b/js/lang/zh-CN.json
@@ -1,7 +1,7 @@
 {
   "nav.home": "首页",
   "nav.about": "关于我们",
-  "nav.silent_kitchen": "无声厨房",
+  "nav.x7_ai": "X7-AI机器人",
   "nav.contact": "联系我们",
   "nav.synapse": "Synapse OS",
   "nav.careers": "加入团队",
