--- a/js/lang/zh-TW.json
+++ b/js/lang/zh-TW.json
@@ -1,7 +1,7 @@
 {
   "nav.home": "首頁",
   "nav.about": "關於我們",
-  "nav.silent_kitchen": "無聲廚房",
+  "nav.x7_ai": "X7-AI機器人",
   "nav.contact": "聯繫我們",
   "nav.synapse": "Synapse OS",
   "nav.careers": "加入團隊",
