--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -15,8 +15,8 @@
   "philosophy.title": "Beyond Food — It's Hard Tech",
   "philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
 
-  "solution.price_title": "Half the Price of Competitors",
-  "solution.price_desc": "< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
+  "solution.price_title": "X7-AI Cooking Robot",
+  "solution.price_desc": "Half the price of competitors<br>< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
   "solution.synapse_title": "Synapse OS",
   "solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
   "solution.learn_more": "Learn More →",
@@ -50,8 +50,8 @@
   "home.hero.cta": "Learn More",
   "home.philosophy.title": "Beyond Food — It's Hard Tech",
   "home.philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
-  "home.solution.price_title": "Half the Price of Competitors",
-  "home.solution.price_desc": "< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
+  "home.solution.price_title": "X7-AI Cooking Robot",
+  "home.solution.price_desc": "Half the price of competitors<br>< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
   "home.solution.synapse_title": "Synapse OS",
   "home.solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
   "home.solution.learn_more": "Learn More →",
