--- a/js/lang/ja.json
+++ b/js/lang/ja.json
@@ -15,8 +15,8 @@
   "philosophy.title": "食を超えて、ハードテックへ",
   "philosophy.desc": "外食産業のコントロール不能な手動調理プロセスを、AI時代に適した高信頼の産業オートメーションプロセスに変換します。<br>北米で中華料理の新たな可能性を創造します。",
 
-  "solution.price_title": "競合の半額",
-  "solution.price_desc": "2週間以内の低コスト改装で<br>無人調理を実現",
+  "solution.price_title": "X7-AI調理ロボット",
+  "solution.price_desc": "競合の半額<br>2週間以内の低コスト改装で<br>無人調理を実現",
   "solution.synapse_title": "Synapse OS",
   "solution.synapse_desc": "次世代レストラン運営システム<br>中華料理の海外展開をワンストップで標準化",
   "solution.learn_more": "詳しく見る →",
@@ -50,8 +50,8 @@
   "home.hero.cta": "詳しく見る",
   "home.philosophy.title": "食を超えて、ハードテックへ",
   "home.philosophy.desc": "外食産業の制御しづらい手動調理プロセスを、AI時代に適した高信頼の産業自動化プロセスに変換します。<br>北米で中華料理の新たな可能性を創造します。",
-  "home.solution.price_title": "競合の半額",
-  "home.solution.price_desc": "2週間以内の低コスト改装で<br>無人調理を実現",
+  "home.solution.price_title": "X7-AI調理ロボット",
+  "home.solution.price_desc": "競合の半額<br>2週間以内の低コスト改装で<br>無人調理を実現",
   "home.solution.synapse_title": "Synapse OS",
   "home.solution.synapse_desc": "次世代レストラン運営システム<br>中華料理の海外展開をワンストップで標準化",
   "home.solution.learn_more": "詳しく見る →",
