--- a/js/lang/ko.json
+++ b/js/lang/ko.json
@@ -15,8 +15,8 @@
   "philosophy.title": "음식을 넘어, 하드 테크",
   "philosophy.desc": "외식 산업의 통제 불가능한 수동 조리 과정을 AI 시대에 맞는 고신뢰 산업 자동화 프로세스로 전환합니다.<br>북미에서 중화 요리의 새로운 가능성을 만듭니다.",
 
-  "solution.price_title": "경쟁사 가격의 1/2",
-  "solution.price_desc": "2주 이내 저비용 개조<br>무인 조리 실현",
+  "solution.price_title": "X7-AI 조리 로봇",
+  "solution.price_desc": "경쟁사 가격의 1/2<br>2주 이내 저비용 개조<br>무인 조리 실현",
   "solution.synapse_title": "Synapse OS",
   "solution.synapse_desc": "차세대 레스토랑 운영 시스템<br>중식 해외 진출을 위한 원스톱 표준화 솔루션",
   "solution.learn_more": "자세히 보기 →",
@@ -50,8 +50,8 @@
   "home.hero.cta": "자세히 보기",
   "home.philosophy.title": "음식을 넘어, 하드 테크",
   "home.philosophy.desc": "외식 산업의 통제 불가능한 수동 조리 과정을 AI 시대에 맞는 고신뢰 산업 자동화 프로세스로 전환합니다.<br>북미에서 중화 요리의 새로운 가능성을 만듭니다.",
-  "home.solution.price_title": "경쟁사 가격의 1/2",
-  "home.solution.price_desc": "2주 이내 저비용 개조<br>무인 조리 실현",
+  "home.solution.price_title": "X7-AI 조리 로봇",
+  "home.solution.price_desc": "경쟁사 가격의 1/2<br>2주 이내 저비용 개조<br>무인 조리 실현",
   "home.solution.synapse_title": "Synapse OS",
   "home.solution.synapse_desc": "차세대 레스토랑 운영 시스템<br>중식 해외 진출을 위한 원스톱 표준화 솔루션",
   "home.solution.learn_more": "자세히 보기 →",
