--- a/js/lang/zh-CN.json
+++ b/js/lang/zh-CN.json
@@ -15,8 +15,8 @@
   "philosophy.title": "不止于餐饮，更是硬科技",
   "philosophy.desc": "我们将餐饮业不可控的人工烹饪环节，转换为 AI 时代高度可靠的工业自动化环节。<br>在北美，书写中华美食的各种可能。",
 
-  "solution.price_title": "竞品价格 1/2",
-  "solution.price_desc": "< 2周 低成本改装<br>实现无人化烹饪",
+  "solution.price_title": "X7-AI炒菜机器人",
+  "solution.price_desc": "竞品价格 1/2<br>< 2周 低成本改装<br>实现无人化烹饪",
   "solution.synapse_title": "Synapse OS",
   "solution.synapse_desc": "下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务",
   "solution.learn_more": "了解更多 →",
@@ -50,8 +50,8 @@
   "home.hero.cta": "了解更多",
   "home.philosophy.title": "不止于餐饮，更是硬科技",
   "home.philosophy.desc": "我们将餐饮业不可控的人工烹饪环节，转换为 AI 时代高度可靠的工业自动化环节。<br>在北美，书写中华美食的各种可能。",
-  "home.solution.price_title": "竞品价格 1/2",
-  "home.solution.price_desc": "< 2周 低成本改装<br>实现无人化烹饪",
+  "home.solution.price_title": "X7-AI炒菜机器人",
+  "home.solution.price_desc": "竞品价格 1/2<br>< 2周 低成本改装<br>实现无人化烹饪",
   "home.solution.synapse_title": "Synapse OS",
   "home.solution.synapse_desc": "下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务",
   "home.solution.learn_more": "了解更多 →",
