--- a/js/lang/zh-TW.json
+++ b/js/lang/zh-TW.json
@@ -15,8 +15,8 @@
   "philosophy.title": "不止於餐飲，更是硬科技",
   "philosophy.desc": "我們將餐飲業不可控的人工烹飪環節，轉換為 AI 時代高度可靠的工業自動化環節。<br>在北美，書寫中華美食的各種可能。",
 
-  "solution.price_title": "競品價格 1/2",
-  "solution.price_desc": "< 2週 低成本改裝<br>實現無人化烹飪",
+  "solution.price_title": "X7-AI炒菜機器人",
+  "solution.price_desc": "競品價格 1/2<br>< 2週 低成本改裝<br>實現無人化烹飪",
   "solution.synapse_title": "Synapse OS",
   "solution.synapse_desc": "下一代餐飲操作系統<br>打造中餐出海標準化一條龍服務",
   "solution.learn_more": "了解更多 →",
@@ -50,8 +50,8 @@
   "home.hero.cta": "了解更多",
   "home.philosophy.title": "不止於餐飲，更是硬科技",
   "home.philosophy.desc": "我們將餐飲業不可控的人工烹飪環節，轉換為 AI 時代高度可靠的工業自動化環節。<br>在北美，書寫中華美食的各種可能。",
-  "home.solution.price_title": "競品價格 1/2",
-  "home.solution.price_desc": "< 2週 低成本改裝<br>實現無人化烹飪",
+  "home.solution.price_title": "X7-AI炒菜機器人",
+  "home.solution.price_desc": "競品價格 1/2<br>< 2週 低成本改裝<br>實現無人化烹飪",
   "home.solution.synapse_title": "Synapse OS",
   "home.solution.synapse_desc": "下一代餐飲操作系統<br>打造中餐出海標準化一條龍服務",
   "home.solution.learn_more": "了解更多 →",
